scrollbars bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,7 +71,7 @@
 }
 
 * {
-	scrollbar-width: thin;
+	scrollbar-width: auto;
 }
 
 .mod_mtAuto {
